# apfs-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  ACTION_PINNING_AUDIT.json  ACTION_PINNING_AUDIT.md  AGENTS.md  AGENT_HANDOFF_BRIEF.json  AGENT_HANDOFF_BRIEF.md  APFS_OFFSET_AUDIT.json  APFS_OFFSET_AUDIT.md  API_SURFACE.json  API_SURFACE.md  ASTRO7_DOCS_HARDENING_AUDIT.json  ASTRO7_DOCS_HARDENING_AUDIT.md  ASTRO_DOCS_PLAN.md  BACKLOG_ISSUE_EXPORT.json  BACKLOG_ISSUE_EXPORT.md  BATCHED_LOOP_POLICY.md  BENCHMARK_REGRESSION_AUDIT.json  BENCHMARK_REGRESSION_AUDIT.md  BENCHMARK_REGRESSION_PLAN.md  BLEEDING_EDGE_REPO_AUDIT.json  BLEEDING_EDGE_REPO_AUDIT.md  CARGOLESS_SMOKE_REPORT.json  CARGOLESS_SMOKE_REPORT.md  CARGO_DEPENDENCY_GRAPH.json  CARGO_DEPENDENCY_GRAPH.md  CARGO_TRIAGE.md  CARGO_VET_POLICY_AUDIT.json  CARGO_VET_POLICY_AUDIT.md  CARGO_WORKSPACE_AUDIT.json  CARGO_WORKSPACE_AUDIT.md  CI_QUALITY_GATES.json  CI_QUALITY_GATES.md  CI_TESTING_PROFILING_PLAN.md  CLAUDE.md  CLI_CONTRACT.json  CLI_CONTRACT.md  CONDUCTOR_TRACK_CLOSEOUT_AUDIT.json  (+161 more)
.cargo/: config.toml
.config/: cargo-llvm-cov.toml  cargo-mutants.toml  nextest.toml  proptest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
benches/: README.md
codev/: CHANGELOG.md  README.md
conductor/: history.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
crates/apfs-cli/: Cargo.toml  build.rs
crates/apfs-cli/src/: main.rs
crates/apfs-cli/tests/: e2e_cli.rs  e2e_synthetic_cli.rs
crates/apfs-core/: Cargo.toml
crates/apfs-core/benches/: inspect_synthetic.rs
crates/apfs-core/src/: lib.rs
crates/apfs-core/tests/: integration_inspect.rs  synthetic_inspect.rs
crates/apfs-features/: Cargo.toml
crates/apfs-features/src/: lib.rs
crates/apfs-types/: Cargo.toml
crates/apfs-types/benches/: nx_superblock_bench.rs
crates/apfs-types/src/: lib.rs
crates/apfs-types/tests/: parser_property.rs  property_nx_superblock.rs
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
fixtures/: README.md  synthetic-btree-cursor.img  synthetic-checkpoint-map-omap.img  synthetic-checkpoint-ring.img  synthetic-directory-listing.img  synthetic-file-extract.img  synthetic-file-preview.img  synthetic-gpt-apfs.img  synthetic-mapped-object-read.img  synthetic-omap-btree-root.img  synthetic-omap-lookup.img  synthetic-omap-multinode-lookup.img  synthetic-resolver-facade.img  synthetic-volume-superblock.img
fuzz/: Cargo.toml
fuzz/fuzz_targets/: nx_superblock.rs  object_header.rs
packaging/: README.md
profiling/: README.md  profile_plan.json
python_tests/: test_fixture_properties.py  test_negative_fixtures.py
supply-chain/: audits.toml  config.toml
tests/: README.md
tools/: action_pinning_audit.py  agent_handoff_brief.py  apfs_offset_audit.py  api_surface_snapshot.py  astro7_docs_hardening_audit.py  backlog_issue_export.py  benchmark_regression_audit.py  bleeding_edge_repo_audit.py  cargo_dependency_graph.py  cargo_error_to_tracks.py  cargo_vet_policy_audit.py  cargo_workspace_audit.py  cargoless_smoke_suite.py  ci_quality_gate_audit.py  cli_contract_check.py  cli_contract_snapshot.py  compare_inspect_to_manifest.py  conductor_track_closeout.py  config_sanity_check.py  context_integrity_check.py  current_env_completion_report.py  current_env_final_report.py  current_env_remaining.py  current_env_selftest.py  current_env_tool_inventory_extended.py  current_environment_inventory.py  dependency_license_policy_check.py  diagnostics_bundle.py  docs_package_audit.py  docs_site_audit.py  docs_site_check.py  docs_site_static_check.py  (+58 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+1331 files in other folders)
