[workspace]
members = [
  "crates/apfs-types",
  "crates/apfs-blockdev",
  "crates/apfs-core",
  "crates/apfs-vfs",
  "crates/apfs-win",
  "crates/apfs-features",
  "crates/apfs-fuse",
  "crates/apfs-android",
  "crates/apfs-crypto",
  "crates/apfs-write-lab",
  "crates/apfs-cli",
  "crates/apfs-test",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/edithatogo/codev"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonschema = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
walkdir = "2"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
