[package]
name = "xtask"
version = "0.13.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
apfs-write-lab = { path = "../crates/apfs-write-lab" }
walkdir.workspace = true

[lints]
workspace = true
