[package]
name = "apfs-cli"
version = "0.13.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "apfs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
apfs-blockdev = { path = "../apfs-blockdev" }
apfs-core = { path = "../apfs-core" }
apfs-features = { path = "../apfs-features" }
apfs-win = { path = "../apfs-win" }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
assert_cmd = "2"
predicates = "3"
tempfile = "3"

