[package]
name = "apfs-features"
version = "0.19.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
apfs-crypto = { path = "../apfs-crypto" }
apfs-android = { path = "../apfs-android" }
apfs-fuse = { path = "../apfs-fuse" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
